Project

General

Profile

Actions

Bug #7483

closed

Fiddle::Function::STDCALL is never defined even on WIN32

Bug #7483: Fiddle::Function::STDCALL is never defined even on WIN32

Added by ngoto (Naohisa Goto) almost 14 years ago. Updated almost 14 years ago.

Status:
Closed
Target version:
-
ruby -v:
-
Backport:
[ruby-core:50398]

Description

In ext/fiddle/function.c, Fiddle::Function::STDCALL is defined only when "#ifdef FFI_STDCALL" is true. However, in ffi.h, FFI_STDCALL is declared as an enumerated type, not a macro, and it is always false even on x86 WIN32. According to the Changelog in libffi-3.0.11.tar.gz, FFI_STDCALL was first added in 2002-11-10 as an enumeration.

I create a patch to check existance of FFI_STDCALL in extconf.rb.


Files

fiddle-functions-stdcall.patch (855 Bytes) fiddle-functions-stdcall.patch ngoto (Naohisa Goto), 12/01/2012 12:44 AM
Actions

Also available in: PDF Atom